Fix weird font on Firefox and Apple OSs

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -62,6 +62,8 @@ h3 {
   color: var(--app-color-dark);
   line-height: 1.3;
 
+  font-weight: 700;
+
   transition: color 200ms ease-in;
 }
 
